flicker fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,11 @@
 
 main {
   font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans","Liberation Sans",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  opacity: 0;
+}
+
+main.loaded {
+  opacity: 1;
 }
 
 main .container {
